# AOE2-McMinimap-py-legacy

./: MANIFEST.in  McMinimap.py  README.md  pyproject.toml  requirements.txt
aoe2_mcminimap/: __init__.py  cli.py  mcminimap.py  readers.py  render.py  resources.py  settings.py
aoe2_mcminimap/legacy/: __init__.py
aoe2_mcminimap/legacy/mgz_legacy/: __init__.py  reference.py  util.py
aoe2_mcminimap/legacy/mgz_legacy/body/: __init__.py  achievements.py  actions.py  embedded.py
aoe2_mcminimap/legacy/mgz_legacy/common/: chat.py  map.py
aoe2_mcminimap/legacy/mgz_legacy/fast/: __init__.py  actions.py  header.py
aoe2_mcminimap/legacy/mgz_legacy/header/: ai.py  de.py  hd.py  initial.py  lobby.py  map_info.py  objects.py  playerstats.py  replay.py  scenario.py  unit_type.py
aoe2_mcminimap/legacy/mgz_legacy/summary/: __init__.py  dataset.py  full.py  mcminimap_light.py  players.py  settings.py
data/: mcminimap_constants.json
examples/input/scenarios/: AOC-Scen.scx  AOK-Scen.scn  DE-Scen.aoe2scenario
legacy/: aoe2campaignparser.py  geniescx_legacy.py
tests/: test_readers.py  test_render_border.py
