[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AOE2-McMinimap"
version = "0.1.1"
description = "Static isometric minimaps for Age of Empires II from recordings or scenarios (DE + legacy)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Contributors" }]
keywords = ["age-of-empires", "aoe2", "minimap", "scenario", "recorded-game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "Pillow",
    "AoE2ScenarioParser",
    "AOE2-McMGZ>=0.1.0",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/UnluckyForSome/AOE2-McMinimap"
Repository = "https://github.com/UnluckyForSome/AOE2-McMinimap"

[project.scripts]
aoe2-mcminimap = "aoe2_mcminimap.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aoe2_mcminimap*"]

[tool.setuptools.package-data]
aoe2_mcminimap = [
    "data/**/*",
    "emblems/**/*",
]

[tool.setuptools.exclude-package-data]
aoe2_mcminimap = ["**/__pycache__/**", "**/*.py[co]", "**/*.pyi"]
